--- a/html/primer-proyecto/index.html
+++ b/html/primer-proyecto/index.html
@@ -25,7 +25,7 @@
             <li>Enlace interno para subir arriba</li>
             <a href="#top">Subir Arriba</a>
             <li>guardar una imagen en el proyecto y mostrarla en el index</li>
-            <img src="../img/IMG_3709.jpg" alt="Gotti">
+            <img src="img/IMG_3709.jpg" alt="Gotti">
             <li>Crear varios titulos</li>
             <h1>Primer titulo</h1>
             <h2>Segundo titulo</h2>
