--- a/html/Heroes/index.html
+++ b/html/Heroes/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heroes y Heroinas</title>
+    <title>Marvel DC</title>
+    <!-- enlace para el css -->
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
-<body id="top">
+<body>
 
     <header>
-        <h1 class="titulo">MarvelDCpedia</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="heroes.html">Héroes</a></li>
-                <li><a href="villanos.html">Villanos</a></li>
-                <li><a href="comics.html">Comics</a></li>
-                <li><a href="acerca.html">Acerca de</a></li>
-            </ul>
-        </nav>
-
+        <div class="container">
+            <h1>Heroes de Marvel</h1>
+        </div>
     </header>
+
+    <nav id="header">
+        <ul class="container">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="heroes.html">Héroes</a></li>
+            <li><a href="villanos.html">Villanos</a></li>
+            <li><a href="comics.html">Comics</a></li>
+            <li><a href="acerca.html">Acerca de</a></li>
+        </ul>
+    </nav>
+
 
     <main id="inicioMain">
         <section>
             <article>
-                <h2>Presentación </h2>
+                <h2>Presentación</h2>
                 <p>Un superhéroe es un personaje de ficción cuyas características superan las del héroe clásico,
                     generalmente con poderes sobrehumanos aunque no necesariamente, y entroncado con la ciencia ficción.
                     Generados a finales de los años 1930 en la industria del comic book estadounidense, que
@@ -40,11 +44,10 @@
                     conocido en la sociedad británica georgiana como interesado más en sus ropas que en cualquier otra
                     cosa.</p>
                 <img src="img/spiderman.jpg" alt="spiderman">
-
             </article>
 
             <article>
-                <h2>SuperHeroína de la semana</h2>
+                <h2>Superheroína de la semana</h2>
                 <img src="img/superwoman.jpg" alt="superwoman">
                 <p>Es una superheroína ficticia creada por William Moulton Marston para la editorial DC Comics. Es una
                     princesa guerrera de las Amazonas, pueblo ficticio basado en el de las amazonas de la mitología
@@ -53,36 +56,41 @@
                     identidad secreta de Diana Prince. Está dotada de una amplia gama de poderes superhumanos y
                     habilidades de combate de batalla superiores, gracias a sus dones obtenidos de los dioses y su
                     amplio entrenamiento.</p>
-
             </article>
         </section>
     </main>
 
     <footer>
+        <div class="container">
+            <section>
+                <nav>
+                    <ul>
+                        <li><a href="">Cookies</a></li>
+                        <li><a href="">Aspectos legales</a></li>
+                        <li><a href="">Contacto</a></li>
+                    </ul>
+                </nav>
+            </section>
+            <section>
+                <img class="logo" src="img/marvel.png" alt="marvel">
+                <img class="logo" src="img/dc.png" alt="dc">
+            </section>
+            <section>
+                <nav>
+                    <ul class="text-right">
+                        <li> <a href="https://www.marvel.com/">Marvel</a><br>
+                        <li><a href="https://www.dccomics.com/">DC Comics</a></li>
+                    </ul>
+                </nav>
+            </section>
 
-        <section>
-            <ol>
-                <li><a href="">Cookies</a></li>
-                <li><a href="">Aspectos legales</a></li>
-                <li><a href="">Contacto</a></li>
-            </ol>
-        </section>
 
-        <section id="logos">
-            <img class="logo" src="img/marvel.png" alt="marvel">
-            <img class="logo" src="img/dc.png" alt="dc">
-        </section>
-
-        <section>
-            <a href="https://www.marvel.com/">Marvel</a><br>
-            <a href="https://www.dccomics.com/">DC Comics</a>
-        </section>
-
-
+            <!-- 
+                las tablas se usan solo para mostrar datos, no para maquetar, 
+                pasar todo a los section de arriba
+            -->
+        </div>
     </footer>
-
-
-
 
 </body>
 
