--- a/html/Heroes/heroes.html
+++ b/html/Heroes/heroes.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heroes y Heroinas</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-
+    <title>Marvel DC</title>
+    <!-- enlace para el css -->
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
-<body id="top">
+<body>
 
     <header>
-        <h1 class="titulo">MarvelDCpedia</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="heroes.html">Héroes</a></li>
-                <li><a href="villanos.html">Villanos</a></li>
-                <li><a href="comics.html">Comics</a></li>
-                <li><a href="acercax.html">Acerca de</a></li>
-            </ul>
-        </nav>
-
+        <div class="container">
+            <h1>Heroes de Marvel</h1>
+        </div>
     </header>
 
-    <main>
+    <nav id="header">
+        <ul class="container">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="heroes.html">Héroes</a></li>
+            <li><a href="villanos.html">Villanos</a></li>
+            <li><a href="comics.html">Comics</a></li>
+            <li><a href="acerca.html">Acerca de</a></li>
+        </ul>
+    </nav>
+
+
+    <main id="demasPagsMain">
         <section>
             <article>
                 <ul>
@@ -43,49 +46,54 @@
                 </ul>
 
             </article>
-            <div>
-                <h2>Iron Man</h2>
-                <h3>Empresario e ingeniero</h3>
-                <img src="img/ironman.jpg" alt="ironman">
-                <p>Tony Stark, que ha heredado la empresa de armamento Stark Industries de su padre, está en una
-                    Afganistán devastada por la guerra con su amigo y enlace militar, el teniente coronel James Rhodes,
-                    para demostrar del nuevo misil «Jericó». </p>
-                <p>Posteriormente crean un prototipo de armadura motorizada para ayudarlos a escapar.</p>
-
-            </div>
-
             <article>
+                <div>
+                    <h2>Iron Man</h2>
+                    <h3>Empresario e ingeniero</h3>
+                    <img src="img/ironman.jpg" alt="ironman">
+                    <p>Tony Stark, que ha heredado la empresa de armamento Stark Industries de su padre, está en una
+                        Afganistán devastada por la guerra con su amigo y enlace militar, el teniente coronel James
+                        Rhodes,
+                        para demostrar del nuevo misil «Jericó». </p>
+                    <p>Posteriormente crean un prototipo de armadura motorizada para ayudarlos a escapar.</p>
 
+                </div>
             </article>
         </section>
-
 
     </main>
 
     <footer>
-        <section>
-            <ol>
-                <li><a href="">Cookies</a></li>
-                <li><a href="">Aspectos legales</a></li>
-                <li><a href="">Contacto</a></li>
-            </ol>
-        </section>
+        <div class="container">
+            <section>
+                <nav>
+                    <ul>
+                        <li><a href="">Cookies</a></li>
+                        <li><a href="">Aspectos legales</a></li>
+                        <li><a href="">Contacto</a></li>
+                    </ul>
+                </nav>
+            </section>
+            <section>
+                <img class="logo" src="img/marvel.png" alt="marvel">
+                <img class="logo" src="img/dc.png" alt="dc">
+            </section>
+            <section>
+                <nav>
+                    <ul class="text-right">
+                        <li> <a href="https://www.marvel.com/">Marvel</a><br>
+                        <li><a href="https://www.dccomics.com/">DC Comics</a></li>
+                    </ul>
+                </nav>
+            </section>
 
-        <section id="logos">
-            <img class="logo" src="img/marvel.png" alt="marvel">
-            <img class="logo" src="img/dc.png" alt="dc">
-        </section>
 
-        <section>
-            <a href="https://www.marvel.com/">Marvel</a><br>
-            <a href="https://www.dccomics.com/">DC Comics</a>
-        </section>
-
-
+            <!-- 
+                las tablas se usan solo para mostrar datos, no para maquetar, 
+                pasar todo a los section de arriba
+            -->
+        </div>
     </footer>
-
-
-
 
 </body>
 
