--- a/html/Heroes/villanos.html
+++ b/html/Heroes/villanos.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heroes y Heroinas</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <title>Marvel DC</title>
+    <!-- enlace para el css -->
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
-<body id="top">
+<body>
 
     <header>
-        <h1 class="titulo">MarvelDCpedia</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="heroes.html">Héroes</a></li>
-                <li><a href="villanos.html">Villanos</a></li>
-                <li><a href="comics.html">Comics</a></li>
-                <li><a href="acercax.html">Acerca de</a></li>
-            </ul>
-        </nav>
-
+        <div class="container">
+            <h1>Heroes de Marvel</h1>
+        </div>
     </header>
+
+    <nav id="header">
+        <ul class="container">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="heroes.html">Héroes</a></li>
+            <li><a href="villanos.html">Villanos</a></li>
+            <li><a href="comics.html">Comics</a></li>
+            <li><a href="acerca.html">Acerca de</a></li>
+        </ul>
+    </nav>
+
 
     <main>
         <section>
@@ -42,18 +46,16 @@
                 </ul>
 
             </article>
-            <div>
-                <h2>Viuda negra</h2>
-                <h3>Espía rusa</h3>
-                <img src="img/viuda-negra.jpg" alt="viuda-negra">
-                <p>Fue presentada como una espía rusa, una antagonista del superhéroe Iron Man. </p>
-                <p>Más tarde, desertó a los Estados Unidos, convirtiéndose en una agente de la organización ficticia
-                    S.H.I.E.L.D., y miembro del equipo de superhéroes, Los Vengadores.</p>
-
-            </div>
-
             <article>
+                <div>
+                    <h2>Viuda negra</h2>
+                    <h3>Espía rusa</h3>
+                    <img src="img/viuda-negra.jpg" alt="viuda-negra">
+                    <p>Fue presentada como una espía rusa, una antagonista del superhéroe Iron Man. </p>
+                    <p>Más tarde, desertó a los Estados Unidos, convirtiéndose en una agente de la organización ficticia
+                        S.H.I.E.L.D., y miembro del equipo de superhéroes, Los Vengadores.</p>
 
+                </div>
             </article>
         </section>
 
@@ -61,30 +63,36 @@
     </main>
 
     <footer>
-        <section>
-            <ol>
-                <li><a href="">Cookies</a></li>
-                <li><a href="">Aspectos legales</a></li>
-                <li><a href="">Contacto</a></li>
-            </ol>
-        </section>
+        <div class="container">
+            <section>
+                <nav>
+                    <ul>
+                        <li><a href="">Cookies</a></li>
+                        <li><a href="">Aspectos legales</a></li>
+                        <li><a href="">Contacto</a></li>
+                    </ul>
+                </nav>
+            </section>
+            <section>
+                <img class="logo" src="img/marvel.png" alt="marvel">
+                <img class="logo" src="img/dc.png" alt="dc">
+            </section>
+            <section>
+                <nav>
+                    <ul class="text-right">
+                        <li> <a href="https://www.marvel.com/">Marvel</a><br>
+                        <li><a href="https://www.dccomics.com/">DC Comics</a></li>
+                    </ul>
+                </nav>
+            </section>
 
-        <section id="logos">
-            <img class="logo" src="img/marvel.png" alt="marvel">
-            <img class="logo" src="img/dc.png" alt="dc">
-        </section>
 
-        <section>
-            <a href="https://www.marvel.com/">Marvel</a><br>
-            <a href="https://www.dccomics.com/">DC Comics</a>
-        </section>
-
-
-
+            <!-- 
+                las tablas se usan solo para mostrar datos, no para maquetar, 
+                pasar todo a los section de arriba
+            -->
+        </div>
     </footer>
-
-
-
 
 </body>
 
