--- a/html/primer-proyecto/posicionamiento.html
+++ b/html/primer-proyecto/posicionamiento.html
@@ -1,96 +1,55 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo de la Pestaña</title>
-    <!-- enlaces a nuestras hojas de estilo -->
-    <link rel="stylesheet" href="css/styles.css">
-
+    <title>Posicionamiento</title>    
 </head>
+<body id="top">
+    <style>
+        h1 { color: teal; }
+    </style>
+    <h1>Posicionamiento</h1>
+    <a href="https://uniwebsidad.com/libros/css/capitulo-5" target="_blank" >Tutorial</a>
 
-<body>
-    <h1 id="top">Posicionamiento</h1>
-    <a href="https://uniwebsidad.com/libros/css/capitulo-5">Tutorial</a>
 
     <h2>Posicionamiento Relativo</h2>
     <style>
-        #pr {
-            background-color: grey;
-            padding: 30px;
-        }
-
-        #pr span {
-            background-color: pink;
-            padding: 10px;
-        }
+        #pr { background-color: grey; padding: 30px; }
+        #pr span { background-color: pink; padding: 10px;}
+        #pr .relativo { background-color: orange; position: relative; top: 25px; left: 30px;}
     </style>
     <section id="pr">
-        <span>Contenido 1</span>
+        <span class="relativo">Contenido 1</span>
         <span>Contenido 2 un poco mas largo</span>
+        <span>Contenido 3</span>
     </section>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laudantium tenetur explicabo. Voluptas dolorum
-        earum dolores qui quod obcaecati consequuntur unde eos magnam tempora. Quo qui iste magnam doloribus enim.</p>
-    <p>Distinctio tempore incidunt repellendus laudantium sapiente iusto mollitia voluptate soluta, et animi debitis
-        explicabo. Repellat inventore distinctio quaerat quia fuga similique! Rerum dolorum quia adipisci excepturi,
-        doloremque libero optio veniam!</p>
-    <p>Ad dolor tempora accusantium doloremque a aliquid delectus doloribus architecto facilis rerum totam iste
-        temporibus voluptate, fugiat cupiditate. Quam earum esse pariatur. Repellendus eius enim ratione optio cumque,
-        magnam consequatur.</p>
-    <p>Nisi officiis harum laboriosam alias deserunt, nihil eius quis placeat labore, minus rerum nobis quos voluptas
-        illo pariatur, est sapiente. Ducimus quia similique blanditiis adipisci qui quibusdam odit voluptas quasi.</p>
-    <p>Et totam omnis voluptas possimus cum, natus sequi accusamus sed magnam ut. Beatae repudiandae dolore totam libero
-        unde explicabo odio quae nostrum voluptatibus nobis ut, quam tenetur corrupti dignissimos tempora!</p>
-    <p>Quidem, inventore id ullam distinctio nostrum optio eaque. Explicabo omnis debitis possimus voluptatibus,
-        asperiores inventore minima temporibus laborum consectetur atque molestias dolor doloribus? Asperiores quos
-        dignissimos quod minima est! Repudiandae.</p>
-    <p>Sequi dolorem molestias iusto necessitatibus tenetur iste rerum facilis voluptatem dolor nam temporibus id minus
-        quibusdam, quis libero labore. Illum aut quidem numquam? At labore maiores praesentium temporibus a adipisci.
-    </p>
-    <p>Architecto nesciunt, ducimus nulla eveniet hic ipsam voluptatibus accusantium enim provident soluta accusamus
-        consectetur tempora cupiditate asperiores fugit explicabo repellat aperiam quo facere perferendis? Assumenda
-        numquam sed deleniti quos! Velit?</p>
-    <p>Enim corporis blanditiis molestias error at impedit dolor? At, quo molestiae tempora veniam impedit tempore nemo?
-        Earum, illum. Quo vitae quidem omnis magni voluptas ducimus sit cum nobis aliquid assumenda!</p>
-    <p>Voluptatum cumque odio iure autem velit sequi dolore repellendus beatae aliquid quis pariatur molestias rerum
-        quasi quaerat accusantium consequatur ipsa nulla officia, laboriosam quod unde atque at? Asperiores, doloremque
-        neque?</p>
-    <p>Earum blanditiis impedit unde amet soluta enim, nisi natus animi esse perspiciatis et iste sapiente adipisci in
-        eaque ex provident quisquam, perferendis quis? Mollitia omnis, doloribus error cumque ipsum temporibus!</p>
-    <p>Sunt illo rem optio blanditiis porro cupiditate quam aliquam suscipit veritatis doloremque. Recusandae, placeat
-        non reprehenderit, excepturi, odio corporis dolorum aliquam eos quod aperiam ipsum doloribus labore
-        exercitationem amet inventore.</p>
-    <p>Et, facilis. Ab, maiores laudantium. Earum quod fugit iste, qui cum eligendi suscipit aperiam consequatur, beatae
-        laudantium quia illum. Esse ipsum quae odit. Dignissimos dicta obcaecati corrupti culpa placeat eaque!</p>
-    <p>Quasi excepturi dolore rem sit expedita commodi possimus molestias doloribus, nostrum odit. Ipsa, ea adipisci
-        aliquid nulla fugit sit doloribus ullam minima quae fugiat iste sequi veniam dolores mollitia non.</p>
-    <p>Vero laboriosam, cupiditate aut accusantium deleniti voluptatem accusamus consectetur molestiae soluta ab iure
-        pariatur ipsa tempore doloribus error aliquam voluptatum delectus, eos nemo id praesentium, odit eligendi?
-        Voluptates, ullam quos!</p>
-    <p>Quas sapiente similique quaerat accusamus ducimus neque pariatur? Consequatur recusandae et facere magnam, in
-        earum minus a. Odit voluptas, facere recusandae, quis error sequi omnis nihil magnam eveniet, ipsa quaerat?</p>
-    <p>Nobis natus excepturi ipsa molestiae dolorem, veniam, illum aliquam magni quis possimus dolorum tenetur
-        exercitationem facilis? Tenetur quod nihil, asperiores quos doloremque ullam nemo facilis ex? Id corporis
-        ratione laborum.</p>
-    <p>Blanditiis reprehenderit delectus voluptas et, omnis harum ex non officia illum eligendi corrupti explicabo iure
-        cumque autem illo tempora porro! Nemo quas quis unde obcaecati velit aliquam, eveniet nulla ducimus?</p>
-    <p>Velit placeat aperiam ea alias. Obcaecati nobis ratione veritatis ipsum suscipit? Numquam recusandae voluptate at
-        eaque quod, asperiores mollitia nesciunt eos fugiat ullam inventore tenetur iure assumenda qui animi
-        praesentium.</p>
-    <p>Deleniti reiciendis cumque culpa, aperiam vero asperiores, vel quae libero sapiente minus quibusdam pariatur id.
-        Beatae distinctio veniam tempora debitis, non dignissimos ratione animi. Praesentium ullam aut repudiandae neque
-        explicabo.</p>
+
+    
+    <h2>Posicionamiento Absoluto</h2>
+    <p>El truco para posicionar un elemento de forma absoluta respecto a su contenedor es:</p>
+    <p>Poner el contenedor con <b>position: relative</b></p>
+    <style>
+        #abs { background-color: grey; padding: 30px; position: relative;}
+        #abs span { background-color: pink; padding: 10px;}
+        #abs .absoluto { background-color: red; position: absolute; top: 25px; left: 30px; }
+    </style>
+    <section id="abs">
+        <span class="absoluto">ABSOLUTO</span>
+        <span>Contenido 2 un poco mas largo</span>
+        <span>Contenido 3</span>
+    </section>
 
     <h2>Poscionamiento Fijo</h2>
     <p>Funciona igual que el absoluto, pero el elemneto es FIJO respecto a la ventan del navegador</p>
     <p>Hacer scroll para ver como esta de forma fija</p>
     <!-- 
-            alinear abajo a la derecha, 
-            poner que sea un circulo, 
-            meter un 'anchor' para que la pulsar suba hasta arriba
-        -->
+        alinear abajo a la derecha, 
+        poner que sea un circulo, 
+        meter un 'anchor' para que la pulsar suba hasta arriba,
+        usar border-radious y box-shadow
+    -->
     <style>
         .btn_top {
             position: fixed;
@@ -99,31 +58,73 @@
             width: 50px;
             height: 50px;
             border-radius: 50%;
-            background-color: orange;
-            -webkit-box-shadow: -4px 5px 9px 1px rgba(0, 0, 0, 0.49);
-            -moz-box-shadow: -4px 5px 9px 1px rgba(0, 0, 0, 0.49);
-            box-shadow: -4px 5px 9px 1px rgba(0, 0, 0, 0.49);
+            background-color: orange;      
+            -webkit-box-shadow: -4px 5px 9px 1px rgba(0,0,0,0.49);
+            -moz-box-shadow: -4px 5px 9px 1px rgba(0,0,0,0.49);
+            box-shadow: -4px 5px 9px 1px rgba(0,0,0,0.49);          
         }
 
-        .btn_top:hover {
+        .btn_top:hover{
+            transition: 1s;
             background-color: #d66718;
-            -webkit-box-shadow: 1px 1px 17px 8px rgba(0, 0, 0, 0.49);
-            -moz-box-shadow: 1px 1px 17px 8px rgba(0, 0, 0, 0.49);
-            box-shadow: 1px 1px 17px 8px rgba(0, 0, 0, 0.49);
-        }
+            -webkit-box-shadow: 1px 1px 17px 8px rgba(0,0,0,0.49);
+            -moz-box-shadow: 1px 1px 17px 8px rgba(0,0,0,0.49);
+            box-shadow: 1px 1px 17px 8px rgba(0,0,0,0.49);        
+        } 
 
         .btn_top a {
             color: #FFF;
             font-size: 4rem;
             font-weight: 100;
-            text-decoration: none;
+            text-decoration: none;            
             padding-left: 11px;
             font-family: Arial;
         }
-    </style>
-    <span class="btn_top"><a href="#top">^</span>
 
+    </style>
+    <span class="btn_top"><a href="#top">^</a></span>
+
+
+    <style>
+        .imagen-flotante {
+            float: left;
+            margin-right: 25px;
+            margin-bottom: 20px;
+        }
+    </style>
+    <h2>Posicionamiento Flotante</h2>
+    <div>
+        <img class="imagen-flotante" src="http://lorempixel.com/200/200/sports" alt="imagen aleatoria">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias beatae debitis commodi culpa sed optio, dolore facere voluptatibus, nesciunt eveniet ea. Modi temporibus totam sapiente deleniti voluptates, quis voluptas mollitia.</p>
+        <p>Nobis consequatur voluptatum aspernatur, omnis at nostrum, reprehenderit optio, amet unde sunt iure! Nihil expedita maxime repellendus neque! Quisquam blanditiis beatae quos iure eum quia dicta impedit assumenda vel exercitationem.</p>
+        <p>Minus eaque animi aliquid expedita repellat ratione asperiores totam repudiandae, molestias, harum illo accusamus necessitatibus quae. Ex alias in facere, dicta tempora eius enim recusandae fuga corrupti cupiditate. Ipsa, voluptas.</p>
+    </div>
+
+
+
+    <hr>
+
+    <!-- para conseguir que la pagina sea mas larga y poder hacer scroll -->
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum tempore saepe maxime laboriosam iure laborum sed molestias expedita id quibusdam nulla dolorum necessitatibus dignissimos, praesentium quas! Fugiat soluta quae incidunt?</p>
+    <p>Praesentium impedit vero ratione incidunt minima dicta consectetur dolore ipsum rem non tempore, illum mollitia distinctio esse veniam necessitatibus asperiores ad maxime expedita quis eligendi cupiditate, molestiae alias possimus. Numquam!</p>
+    <p>Libero sint, itaque eius non id laudantium deleniti dignissimos adipisci voluptatum officia obcaecati doloribus eos dolor ipsam sit accusamus aliquid velit nemo? Deserunt autem repudiandae alias officia temporibus quaerat eius?</p>
+    <p>Tenetur neque libero deleniti aliquam voluptatem dolorum ab, vero ipsum incidunt cupiditate delectus, excepturi placeat facere similique voluptatum quasi voluptates aspernatur quae asperiores ex repellendus, commodi ea! Hic, aliquid officiis.</p>
+    <p>Sequi illum voluptas sunt itaque exercitationem iure recusandae, harum consequatur tempora debitis, autem ullam culpa nesciunt quisquam iusto saepe perferendis dolores minus. Natus, veritatis. Exercitationem, sed optio. Autem, laudantium itaque.</p>
+    <p>Iure eum, nihil deleniti officiis maiores cum molestias illum quis ab voluptatum reiciendis perferendis laborum vitae! Sapiente, illum, saepe dolorum magni vero delectus commodi eos perferendis explicabo, doloremque amet voluptate?</p>
+    <p>Rerum cum sapiente dolore mollitia dolorum id officiis odio atque illo veritatis doloribus, expedita nostrum maiores blanditiis voluptatum velit consequuntur pariatur deserunt impedit incidunt autem beatae est! Animi, nulla aut?</p>
+    <p>Recusandae ullam, consequatur quae dolorum, quibusdam repellat vero eaque dolore rerum cumque nulla sed reprehenderit velit quas nesciunt in, exercitationem saepe tenetur? Deleniti cupiditate expedita omnis ex ducimus! Consectetur, atque?</p>
+    <p>Modi doloremque amet dolores architecto labore neque reiciendis harum minus libero possimus sapiente pariatur accusamus molestiae autem ipsam sint, inventore eos odio blanditiis voluptatibus. Quod nam dolores iste suscipit unde?</p>
+    <p>Ullam molestias aperiam laborum mollitia nesciunt, dolor id. Quos sit, possimus et assumenda voluptatem consectetur. Consequatur placeat nisi praesentium quod libero suscipit accusantium commodi neque. Id vero commodi incidunt autem.</p>
+    <p>Consequuntur perspiciatis, quisquam modi voluptatibus praesentium dolores fugit quia nobis quas deleniti sequi, dolorum omnis quam. Veritatis voluptatum nihil voluptate ad nisi corrupti eius impedit libero officiis placeat, cupiditate omnis?</p>
+    <p>Perspiciatis porro corporis aperiam ad cupiditate iure recusandae voluptatibus placeat? Earum ab commodi doloremque adipisci temporibus iusto minus aut, nemo voluptatum qui praesentium minima amet delectus labore ipsam odit ullam!</p>
+    <p>Nisi maxime inventore, autem cum iusto nulla ipsum exercitationem ducimus ipsa, voluptatem mollitia fugiat! Dolorem dicta vero harum neque vel doloribus, sed molestiae culpa quos quam totam beatae minus dolore.</p>
+    <p>Nihil hic at similique qui ratione eius nisi tempora cupiditate dolore sunt, sed recusandae magnam dolor mollitia non debitis voluptate minus cumque praesentium alias voluptatem tempore deleniti. Maxime, debitis. Fuga!</p>
+    <p>Doloribus incidunt doloremque dicta molestias, ratione sequi sapiente accusamus dolorum reprehenderit labore soluta in neque debitis deleniti velit minima animi id quis quibusdam autem vel? Molestias molestiae officiis quaerat enim.</p>
+    <p>Aliquid cum error ipsam autem facilis, mollitia atque consectetur dolor quae, natus commodi. Facere, corporis tenetur aliquid sequi dolore accusamus. Debitis suscipit labore ratione ex fugiat veniam voluptas illo qui!</p>
+    <p>Fugiat praesentium veniam possimus, minima tenetur laboriosam sint voluptatem natus veritatis quam eligendi ea ipsam modi alias esse impedit officia. Neque quia, eius dolorum at inventore quaerat laboriosam repellat quod.</p>
+    <p>Amet et asperiores eius ducimus assumenda! Sint praesentium voluptatibus voluptatum eius cumque consequuntur soluta repellat ipsam tempore obcaecati quaerat ratione incidunt ad tempora odit porro, accusantium unde facere dicta illo?</p>
+    <p>Optio veritatis distinctio alias atque rem placeat non animi nisi eum. Et dolores quos at ut, ratione magni amet, inventore numquam ipsa rem quisquam corporis accusantium deserunt nisi nesciunt aut.</p>
+    <p>Laboriosam natus, rerum, quae quaerat tenetur hic fuga minus at repellendus, pariatur tempore consequatur inventore omnis possimus officiis sit minima optio illum sed vero. Nulla quisquam aliquam modi quam in.</p>
 
 </body>
-
 </html>
