--- a/html/Heroes/index.html
+++ b/html/Heroes/index.html
@@ -29,8 +29,8 @@
     </nav>
 
 
-    <main id="inicioMain">
-        <section>
+    <main>
+        <section class="container">
             <article>
                 <h2>Presentación</h2>
                 <p>Un superhéroe es un personaje de ficción cuyas características superan las del héroe clásico,
